--- a/src/Stylesheets/scss/_app.scss
+++ b/src/Stylesheets/scss/_app.scss
@@ -5,7 +5,7 @@ body {
 }
 
 .App {
-  text-align: center;
+  //text-align: center;
 }
 
 .App-logo {
@@ -22,6 +22,24 @@ body {
 
 .App-intro {
   font-size: large;
+}
+
+section#nav {
+  position: absolute;
+  width: 15%;
+  left: 0;
+  top:0;
+  height: 100%;
+  border-right: 1px solid rgb(224, 224, 224);
+}
+
+section#main {
+  width: 81%;
+  left: 15%;
+  top: 0;
+  position: absolute;
+  overflow-y: auto;
+  padding: 20px 2%;
 }
 
 @keyframes App-logo-spin {
