Extend component views and add features

--- a/src/Stylesheets/scss/_app.scss
+++ b/src/Stylesheets/scss/_app.scss
@@ -5,7 +5,10 @@ body {
 }
 
 .App {
-  //text-align: center;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
 .App-logo {
@@ -39,7 +42,26 @@ section#main {
   top: 0;
   position: absolute;
   overflow-y: auto;
-  padding: 20px 2%;
+  padding: 0 2%;
+}
+section#action {
+  position: absolute;
+  right: 0;
+  bottom: 20px;
+  z-index: 100;
+}
+section#floor {
+  position: fixed;
+  width: 100%;
+  transition:all 0.3s;
+  z-index: 10;
+  box-shadow: 0 0 20px -5px rgba(0, 0, 0, 0.5);
+  &.hidden {
+    bottom: -80px;
+  }
+  &.visible {
+    bottom: 0;
+  }
 }
 
 @keyframes App-logo-spin {
