--- a/src/Stylesheets/scss/_app.scss
+++ b/src/Stylesheets/scss/_app.scss
@@ -37,13 +37,28 @@ section#nav {
 }
 
 section#main {
-  width: 81%;
+  width: 85%;
   left: 15%;
   top: 0;
   position: absolute;
   overflow-y: auto;
+  //padding: 0 2%;
+}
+.app-core-view {
   padding: 0 2%;
 }
+.app-core-head {
+  background-color: rgb(0, 188, 212);
+  color: #fff;
+  padding: 20px;
+  text-transform: uppercase;
+}
+.app-core-settings {
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
 section#action {
   position: absolute;
   right: 0;
