Extend task view add/save/delete

--- a/src/Stylesheets/scss/_app.scss
+++ b/src/Stylesheets/scss/_app.scss
@@ -45,7 +45,7 @@ section#main {
   //padding: 0 2%;
 }
 .app-core-view {
-  padding: 0 2%;
+  //padding: 0 2%;
 }
 .app-core-head {
   background-color: rgb(0, 188, 212);
