--- a/src/Stylesheets/scss/_addtask.scss
+++ b/src/Stylesheets/scss/_addtask.scss
@@ -29,3 +29,23 @@
   margin: 20% auto;
   border-radius: 2px;
 }
+.task-add-form, .task-add-users {
+  display: inline-block;
+}
+
+.task-add-form {
+  width: 60%;
+}
+
+.task-add-users {
+  width: 40%;
+}
+.task-add-view div {
+  vertical-align: top;
+}
+
+.user-view-intro {
+  padding: 20px;
+  text-transform: uppercase;
+  color: #666;
+}
