--- a/src/Stylesheets/scss/_addtask.scss
+++ b/src/Stylesheets/scss/_addtask.scss
@@ -1,6 +1,3 @@
-.task-add-view {
-  padding: 0 2%;
-}
 .form-view {
   padding: 10px;
   background: #ededed;
@@ -29,19 +26,22 @@
   margin: 20% auto;
   border-radius: 2px;
 }
-.task-add-form, .task-add-users {
+.task-add-form, .task-add-users,.reminder-add-users, .reminder-add-form {
   display: inline-block;
 }
 
-.task-add-form {
+.task-add-form,.reminder-add-form {
   width: 60%;
 }
 
-.task-add-users {
+.task-add-users,.reminder-add-users {
   width: 40%;
 }
-.task-add-view div {
-  vertical-align: top;
+.task-add-view,.reminder-add-view {
+  padding: 0 2%;
+  div {
+    vertical-align: top;
+  }
 }
 
 .user-view-intro {
